[gd_scene load_steps=5 format=2]

[ext_resource path="res://inimigos/projeteis_inimigos/laser_final_boss/laser.gd" type="Script" id=1]
[ext_resource path="res://inimigos/projeteis_inimigos/laser_final_boss/laser2.png" type="Texture" id=2]
[ext_resource path="res://inimigos/projeteis_inimigos/laser_final_boss/laser.jpg" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 165.36, 15.5522 )

[node name="laser" type="Area2D" groups=[
"laser_boss",
]]
position = Vector2( -0.962891, 0 )
scale = Vector2( 2.56, 1.48 )
script = ExtResource( 1 )

[node name="sprite_laser" type="Sprite" parent="."]
position = Vector2( -16.5846, -0.289656 )
scale = Vector2( 1.03601, 0.952584 )
texture = ExtResource( 2 )

[node name="sprite_laser2" type="Sprite" parent="."]
position = Vector2( -181.749, -0.289656 )
scale = Vector2( 9.29851, 0.952584 )
texture = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( -165.7, 0 )
z_index = 1
shape = SubResource( 1 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
visible = false
position = Vector2( -9.86844, 0 )

[node name="Timer" type="Timer" parent="."]
wait_time = 1.5
autostart = true
[connection signal="body_entered" from="." to="." method="_on_flecha_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_laser_body_exited"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
